@@ -10,6 +10,7 @@ New Features:
 - Created an Auto-Updater for Windows.
 - Added the ability to configure the predominantly used hand. This is taken into 
   account in the default Player Layouts.
+- Added a new in-built Layout that wastes less screen real estate.
 
 Changes:
 - Changed debug-view to a layout with splitter to support resizing the debugger.
